// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-form Reactive Initial Value 1`] = `
<div>
  <form
    class="m-form m-u--margin-top"
    novalidate="novalidate"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                class="m-textfield__input"
                id="mTextfield-fakeId"
                maxlength="Infinity"
                type="text"
              />
                 
              <!---->
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
                
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <div
        class="m-input-style__validation"
      >
        <div
          class="m-textfield__validation"
          id="fakeId"
        >
          <div
            class="m-validation-message m-textfield__validation-message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-primary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset to new value 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots modul-components|m-form Submit Outside Form 1`] = `
<div>
  <form
    class="m-form m-u--margin-top"
    id="123-456"
    novalidate="novalidate"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-input-style m-textfield m--is-tag-default m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                class="m-textfield__input"
                id="mTextfield-fakeId"
                maxlength="Infinity"
                type="text"
              />
                 
              <!---->
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
                
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <div
        class="m-input-style__validation"
      >
        <div
          class="m-textfield__validation"
          id="fakeId"
        >
          <div
            class="m-validation-message m-textfield__validation-message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </form>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      form="123-456"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      form="123-456"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-form Toast Message Count For Form Group 1`] = `
<form
  class="m-form"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <h4
    class="m-u--h6"
  >
    General
  </h4>
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              test
            </span>
             
            <sup
              aria-hidden="true"
              class="m-input-style__required-marker"
            >
              *
            </sup>
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              aria-required="true"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              required="required"
              type="text"
            />
               
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              test
            </span>
             
            <sup
              aria-hidden="true"
              class="m-input-style__required-marker"
            >
              *
            </sup>
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              aria-required="true"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              required="required"
              type="text"
            />
               
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              test
            </span>
             
            <sup
              aria-hidden="true"
              class="m-input-style__required-marker"
            >
              *
            </sup>
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              aria-required="true"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              required="required"
              type="text"
            />
               
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <hr />
   
  <fieldset
    class="m-input-group"
  >
    <!---->
     
    <div
      class="m-input-group__body"
    >
      <div
        class="m-validation-message m-input-group__message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-describedby="fakeId"
        class="m-input-group__content"
      >
        <div
          class="m-input-style m-textfield m--has-label m--has-validation-message m--is-tag-default m--is-type-text"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    test
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    aria-describedby="fakeId"
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                    
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
            
          <div
            class="m-input-style__validation"
          >
            <div
              class="m-textfield__validation"
              id="fakeId"
            >
              <div
                class="m-validation-message m-textfield__validation-message"
              >
                <!---->
                 
                <p
                  class="m-validation-message__helper"
                >
                  5 characters min
                </p>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
        <div
          class="m-input-style m-textfield m--has-label m--has-validation-message m--is-tag-default m--is-type-text"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    test
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    aria-describedby="fakeId"
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                    
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
            
          <div
            class="m-input-style__validation"
          >
            <div
              class="m-textfield__validation"
              id="fakeId"
            >
              <div
                class="m-validation-message m-textfield__validation-message"
              >
                <!---->
                 
                <p
                  class="m-validation-message__helper"
                >
                  5 characters min
                </p>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </fieldset>
   
  <fieldset
    class="m-input-group"
  >
    <!---->
     
    <div
      class="m-input-group__body"
    >
      <div
        class="m-validation-message m-input-group__message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-describedby="fakeId"
        class="m-input-group__content"
      >
        <div
          class="m-input-style m-textfield m--has-label m--has-validation-message m--is-tag-default m--is-type-text"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    test
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    aria-describedby="fakeId"
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                    
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
            
          <div
            class="m-input-style__validation"
          >
            <div
              class="m-textfield__validation"
              id="fakeId"
            >
              <div
                class="m-validation-message m-textfield__validation-message"
              >
                <!---->
                 
                <p
                  class="m-validation-message__helper"
                >
                  5 characters min
                </p>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
        <div
          class="m-input-style m-textfield m--has-label m--has-validation-message m--is-tag-default m--is-type-text"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    test
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    aria-describedby="fakeId"
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                    
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
            
          <div
            class="m-input-style__validation"
          >
            <div
              class="m-textfield__validation"
              id="fakeId"
            >
              <div
                class="m-validation-message m-textfield__validation-message"
              >
                <!---->
                 
                <p
                  class="m-validation-message__helper"
                >
                  5 characters min
                </p>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </fieldset>
   
  <p>
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-primary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form default 1`] = `
<form
  class="m-form m-u--margin-top"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <h2>
    Default with no validations
  </h2>
   
  <div
    class="m-input-style m-textfield m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;
